# data-structures-algorithms-specialization

./: .gitignore  README.md
1. Algorithmic Toolbox/Week 1/: AplusB.cpp  max_pairwise_product.cpp
1. Algorithmic Toolbox/Week 2/: CMakeLists.txt  fibonacci_huge.cpp  fibonacci_last_digit.cpp  lcm.cpp
1. Algorithmic Toolbox/Week 3/: CMakeLists.txt  change.cpp  covering_segments.cpp  dot_product.cpp
1. Algorithmic Toolbox/Week 4/: CMakeLists.txt  sorting.cpp
1. Algorithmic Toolbox/Week 5/: CMakeLists.txt  knapsack.cpp  placing_parentheses.cpp
2. Data Structures/Week 1/: CMakeLists.txt
2. Data Structures/Week 1/check_brackets_in_code/: check_brackets.cpp
2. Data Structures/Week 1/network_packet_processing_simulation/: process_packages.cpp
2. Data Structures/Week 1/tree_height/: tree-height.cpp
2. Data Structures/Week 2/: CMakeLists.txt  build_heap.cpp  job_queue.cpp  merging_tables.cpp
2. Data Structures/Week 3/: CMakeLists.txt  hash_chains.cpp  hash_substring.cpp  phone_book.cpp
Coursera/1. Algorithmic Toolbox/Week 1/: CMakeLists.txt
Coursera/1. Algorithmic Toolbox/Week 2/: fib.cc  gcd.cpp
Coursera/1. Algorithmic Toolbox/Week 3/: different_summands.cpp  fractional_knapsack.cpp
Coursera/1. Algorithmic Toolbox/Week 4/: CMakeLists.txt  binary_search.cpp  inversions.cpp  majority_element.cpp  points_and_segments.cpp
Coursera/1. Algorithmic Toolbox/Week 5/: CMakeLists.txt  edit_distance.cpp  lcs3.cpp  primitive_calculator.cpp
uva/: 1124-CelebrityJeopardy.cpp  272-TeX_Quotes.cpp
